--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -27,4 +27,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/ml-ci-cd-app:latest
+        tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/ml-ci-cd-app:latest
